--- a/LibSFML/Makefile
+++ b/LibSFML/Makefile
@@ -6,7 +6,7 @@
 #    By: tmielcza <tmielcza@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/04/11 13:30:53 by tmielcza          #+#    #+#              #
-#    Updated: 2015/12/01 17:30:42 by tmielcza         ###   ########.fr        #
+#    Updated: 2015/12/04 16:35:42 by rduclos          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
